Tried fixing dynamically secret's name

--- a/.github/workflows/dev-prd.yml
+++ b/.github/workflows/dev-prd.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Make .env file
       uses: SpicyPizza/create-envfile@v1
       with:
-        envkey_DB_URL: ${{ secrets[env.ENV_NAME]_DB_URL }}
-        envkey_DB_USERNAME: ${{ secrets[env.ENV_NAME]_DB_USERNAME }}
-        envkey_DB_PASSWORD: ${{ secrets[env.ENV_NAME]_DB_PASSWORD }}
+        envkey_DB_URL: ${{ secrets.${env.ENV_NAME}_DB_URL }}
+        envkey_DB_USERNAME: ${{ secrets.${env.ENV_NAME}_DB_USERNAME }}
+        envkey_DB_PASSWORD: ${{ secrets.${env.ENV_NAME}_DB_PASSWORD }}
         file_name: .env
 
     - name: Login to Github Docker Registry
