--- a/.github/workflows/dev-prd.yml
+++ b/.github/workflows/dev-prd.yml
@@ -8,8 +8,32 @@ on:
       - main
 
 jobs:
+  prepare:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Set env
+      run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/main" ] && echo 'prd' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
+    
+    - name: Prepare Outputs
+      id: prepare-step
+        # Sets this step's outputs, that later on will be exported as the job's outputs
+      run: |
+        echo "::set-output name=DB_URL::${ENV_NAME}_DB_URL";
+        echo "::set-output name=DB_USERNAME::${ENV_NAME}_DB_USERNAME";
+        echo "::set-output name=DB_PASSWORD::${ENV_NAME}_DB_PASSWORD";
+
+    outputs:
+      DB_URL: ${{ steps.prepare-step.outputs.DB_URL }}
+      DB_USERNAME: ${{ steps.prepare-step.outputs.DB_USERNAME }}
+      DB_PASSWORD: ${{ steps.prepare-step.outputs.DB_PASSWORD }}
+
   build:
     runs-on: ubuntu-latest
+    env:
+      DB_URL: ${{ needs.prepare.outputs.DB_URL }}
+      DB_USERNAME: ${{ needs.prepare.outputs.DB_USERNAME }}
+      DB_PASSWORD: ${{ needs.prepare.outputs.DB_PASSWORD }}
 
     steps:
     - name: Set env
@@ -21,9 +45,9 @@ jobs:
     - name: Make .env file
       uses: SpicyPizza/create-envfile@v1
       with:
-        envkey_DB_URL: ${{ secrets.${{ env.ENV_NAME }}_DB_URL }}
-        envkey_DB_USERNAME: ${{ secrets.${{ env.ENV_NAME }}_DB_USERNAME }}
-        envkey_DB_PASSWORD: ${{ secrets.${{ env.ENV_NAME }}_DB_PASSWORD }}
+        envkey_DB_URL: ${{ secrets[env.DB_URL] }}
+        envkey_DB_USERNAME: ${{ secrets[env.DB_USERNAME] }}
+        envkey_DB_PASSWORD: ${{ secrets[env.DB_PASSWORD] }}
         file_name: .env
 
     - name: Login to Github Docker Registry
