--- a/.github/workflows/dev-prd.yml
+++ b/.github/workflows/dev-prd.yml
@@ -50,6 +50,16 @@ jobs:
         envkey_DB_USERNAME: ${{ secrets[env.DB_USERNAME] }}
         envkey_DB_PASSWORD: ${{ secrets[env.DB_PASSWORD] }}
         file_name: .env
+    
+    - name: Check .env
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.SSH_HOSTNAME }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        source: .env
+        target: ~/int222-related/backend/${{ env.ENV_NAME }}/
+
 
     - name: Login to Github Docker Registry
       uses: docker/login-action@v1
