--- a/.github/workflows/dev-prd.yml
+++ b/.github/workflows/dev-prd.yml
@@ -47,11 +47,7 @@ jobs:
       run: |
         echo DB_URL=${{ secrets[env.DB_URL] }} >> .env
         echo DB_USERNAME=${{ secrets[env.DB_USERNAME] }} >> .env
-        echo DB_PASSWOR=${{ secrets[env.DB_PASSWORD] }} >> .env
-    
-    - name: Check .env
-      run: |
-        ls -la
+        echo DB_PASSWORD=${{ secrets[env.DB_PASSWORD] }} >> .env
 
     - name: Login to Github Docker Registry
       uses: docker/login-action@v1
@@ -92,5 +88,9 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
+          echo DB_URL=${{ secrets[env.DB_URL] }} >> .env
+          echo DB_USERNAME=${{ secrets[env.DB_USERNAME] }} >> .env
+          echo DB_PASSWORD=${{ secrets[env.DB_PASSWORD] }} >> .env
           docker-compose -f ~/int222-related/backend/${{ env.ENV_NAME }}/docker-compose.${{ env.ENV_NAME }}.yml pull
           docker-compose -f ~/int222-related/backend/${{ env.ENV_NAME }}/docker-compose.${{ env.ENV_NAME }}.yml up -d
+          docker exec -it ${{ env.ENV_NAME }}_mysqldb_1 sh -c 'echo DB_URL=${{ secrets[env.DB_URL] }} >> .env && echo DB_URL=${{ secrets[env.DB_URL] }} >> .env && echo DB_PASSWORD=${{ secrets[env.DB_PASSWORD] }} >> .env'
