--- a/.github/workflows/dev-prd.yml
+++ b/.github/workflows/dev-prd.yml
@@ -49,6 +49,14 @@ jobs:
         echo DB_USERNAME=${{ secrets[env.DB_USERNAME] }} >> .env
         echo DB_PASSWORD=${{ secrets[env.DB_PASSWORD] }} >> .env
 
+    - name: Publish .env file
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.SSH_HOSTNAME }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: .env
+        target: ~/int222-related/backend/${{ env.ENV_NAME }}/
+
     - name: Login to Github Docker Registry
       uses: docker/login-action@v1
       with:
@@ -88,9 +96,6 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
-          echo DB_URL=${{ secrets[env.DB_URL] }} >> .env
-          echo DB_USERNAME=${{ secrets[env.DB_USERNAME] }} >> .env
-          echo DB_PASSWORD=${{ secrets[env.DB_PASSWORD] }} >> .env
           docker-compose -f ~/int222-related/backend/${{ env.ENV_NAME }}/docker-compose.${{ env.ENV_NAME }}.yml pull
           docker-compose -f ~/int222-related/backend/${{ env.ENV_NAME }}/docker-compose.${{ env.ENV_NAME }}.yml up -d
-          docker exec -it ${{ env.ENV_NAME }}_mysqldb_1 sh -c 'echo DB_URL=${{ secrets[env.DB_URL] }} >> .env && echo DB_URL=${{ secrets[env.DB_URL] }} >> .env && echo DB_PASSWORD=${{ secrets[env.DB_PASSWORD] }} >> .env'
+          docker cp ~/int222-related/backend/${{ env.ENV_NAME }}/.env ${{ env.ENV_NAME }}_backend_1:/.env
