--- a/.github/workflows/dev-prd.yml
+++ b/.github/workflows/dev-prd.yml
@@ -99,4 +99,4 @@ jobs:
         script: |
           docker-compose -f ~/int222-related/backend/${{ env.ENV_NAME }}/docker-compose.${{ env.ENV_NAME }}.yml pull
           docker-compose -f ~/int222-related/backend/${{ env.ENV_NAME }}/docker-compose.${{ env.ENV_NAME }}.yml up -d
-          docker cp ~/int222-related/backend/${{ env.ENV_NAME }}/.env ${{ env.ENV_NAME }}_backend_1:/.env
+          docker cp ~/int222-related/backend/${{ env.ENV_NAME }}/.env ${{ env.ENV_NAME }}_backend_1:/app/.env
