--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,7 @@ services:
       image: ghcr.io/team-vaxxi/int222-backend:dev
       volumes:
         - ./backendImages:/src/images
+        - ./.env:/app/.env
 
 networks:
     default:
