--- a/.github/workflows/dev-prd.yml
+++ b/.github/workflows/dev-prd.yml
@@ -45,18 +45,10 @@ jobs:
 
     - name: Create .env file
       run: |
+        touch .env
         echo DB_URL=${{ secrets[env.DB_URL] }} >> .env
         echo DB_USERNAME=${{ secrets[env.DB_USERNAME] }} >> .env
         echo DB_PASSWORD=${{ secrets[env.DB_PASSWORD] }} >> .env
-
-    - name: Send .env file to host
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.SSH_HOSTNAME }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: .env
-        target: ~/int222-related/backend/${{ env.ENV_NAME }}/
 
     - name: Login to Github Docker Registry
       uses: docker/login-action@v1
@@ -68,6 +60,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
+        context: .
         push: true
         tags: ghcr.io/team-vaxxi/int222-backend:${{ env.ENV_NAME }}
 
