--- a/.github/workflows/dev-prd.yml
+++ b/.github/workflows/dev-prd.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   prepare:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - name: Set env
@@ -30,7 +30,7 @@ jobs:
 
   build:
     needs: prepare
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       DB_URL: ${{ needs.prepare.outputs.DB_URL }}
       DB_USERNAME: ${{ needs.prepare.outputs.DB_USERNAME }}
@@ -75,7 +75,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - name: Set env
       run: echo "ENV_NAME=$( [ "$GITHUB_REF" == "refs/heads/main" ] && echo 'prd' || echo ${GITHUB_REF##*/} )" >> $GITHUB_ENV
