Added images volume in docker-compose

--- a/docker-compose.prd.yml
+++ b/docker-compose.prd.yml
@@ -3,7 +3,7 @@ services:
       build: .
       image: ghcr.io/team-vaxxi/int222-backend:prd
       volumes:
-        - ./backendImages:/src/images
+        - ./images:/app/images
 
 networks:
     default:
