--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "mysql2": "^2.3.0",
+    "nestjs-form-data": "^1.4.7",
     "path-parse": "^1.0.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
