--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "bcrpyt": "^2.0.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
+    "i": "^0.3.7",
     "mysql2": "^2.3.0",
     "nestjs-form-data": "^1.4.7",
     "passport": "^0.5.0",
@@ -51,6 +54,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
